--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,3 +1,5 @@
+
+
 * {
     margin: 0;
     padding: 0;
@@ -22,6 +24,21 @@
 }
 
 
+.light-mode {
+    --color-primary: #fff;
+    --color-secondary: rgb(151, 37, 37);
+    --color-white: #191d2b;
+    --color-black: #000;
+    --color-grey0: #f8f8f8;
+    --color-grey-1: #dbe1e8;
+    --color-grey-2: #b2becd;
+    --color-grey-3: #6c7983;
+    --color-grey-4: #454e56;
+    --color-grey-5: #2a2e35;
+    --color-grey-6: #12181b;
+}
+
+
 body {
     background-color: var(--color-primary);
     font-family: 'Poppins', sans-serif;
@@ -38,9 +55,10 @@ a {
 }
 
 header {
-    height: 100vh;
+    min-height: 100vh;
     color: var(--color-white);
     overflow: hidden;
+    
 }
 
 section {
@@ -136,12 +154,36 @@ section {
     }
 }
 
+.theme-btn {
+   top: 5%;
+   right: 3%;
+   width: 70px;
+   height: 70px;
+   border-radius: 50%;
+   background-color: var(--color-grey-4);
+   cursor: pointer;
+   position: fixed;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   box-shadow: 0 3px 15px rgba(0,0,0,.3);
+   transition: all .1s ease-in-out;
+   &:active{
+       transform: translateY(-3px);
+   }
+   i{
+      font-size: 1.4rem; 
+      color: var(--color-grey-2);
+      pointer-events: none;
+   }
+}
+
 
 // Header content
 .header-content {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    height: 100%;
+    min-height: 100vh;
     .left-header {
         display: flex;
         align-items: center;
@@ -701,3 +743,6 @@ section {
         }
     }
 }
+
+
+@import './media';
